@@ -3718,4 +3718,26 @@ extern GeoIP * gidb;
 void ConsolizeString(char *in, char *out);
 team_t TeamFromString(char *team);
 
+// pheno: moved from g_spawn.c
+typedef enum {
+	F_INT, 
+	F_FLOAT,
+	F_LSTRING,			// string on disk, pointer in memory, TAG_LEVEL
+	F_GSTRING,			// string on disk, pointer in memory, TAG_GAME
+	F_VECTOR,
+	F_ANGLEHACK,
+	F_ENTITY,			// index on disk, pointer in memory
+	F_ITEM,				// index on disk, pointer in memory
+	F_CLIENT,			// index on disk, pointer in memory
+	F_IGNORE
+} fieldtype_t;
+
+typedef struct
+{
+	char		*name;
+	int			ofs;
+	fieldtype_t	type;
+	int			flags;
+} field_t;
+
 #endif
